# freezer_monitor

./: .gitignore  freezer_monitor.service  pyproject.toml  setup.py
freezer_monitor/: __init__.py  display.py  emailer.py  freezer_monitor.py  freezer_monitor_email.yml  parselog.py  parsers.py  plotting.py  timerotatingcsv.py  websocket.py
freezer_monitor/sensors/: basesensor.py  sht30.py
src/freezer_monitor/: __init__.py  cli.py  display.py  emailer.py  freezer_monitor.py  monitor.py  parsers.py  plotting.py  timerotatingcsv.py  utils.py  websocket.py
src/freezer_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/freezer_monitor/sensors/: __init__.py  basesensor.py  sht.py  sht30.py
